Scrolling fixes on sidebar, better scrollbar for attachment popups

--- a/public/style.scss
+++ b/public/style.scss
@@ -126,8 +126,9 @@ aside {
     background-color: $black;
     color: #fff;
 
-    > div {
+    .sidebar_main {
         padding: 0 20px;
+        padding-bottom: 20px;
         height: calc(100% - 70px);
         overflow-y: auto;
     }
@@ -539,6 +540,20 @@ label.button {
 
             &.y {
                 overflow-y: auto;
+            }
+
+            &::-webkit-scrollbar {
+                width: 10px;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background-color: rgba($grey, 0.5);
+                border-radius: 5px;
+                box-shadow: inset 0 0 0 2px #FFF;
+
+                &:hover {
+                    background-color: rgba($grey, 0.7);
+                }
             }
         }
     }
